--- a/docs/intro_examples/chat/guided_openai_chat_examples.ipynb
+++ b/docs/intro_examples/chat/guided_openai_chat_examples.ipynb
@@ -15,10 +15,17 @@
    "execution_count": 1,
    "id": "39987299-00eb-44bf-8a86-8ffc0dfe712f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "import sys\n",
-    "sys.path.append(\"../../..\")"
+    "pip install langtree --quiet"
    ]
   },
   {
