--- a/docs/intro_examples/prompting/guided_prompting_examples.ipynb
+++ b/docs/intro_examples/prompting/guided_prompting_examples.ipynb
@@ -17,8 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append(\"../../..\")"
+    "pip install langtree --quiet"
    ]
   },
   {
