--- a/docs/operator_examples/guided_operators_examples.ipynb
+++ b/docs/operator_examples/guided_operators_examples.ipynb
@@ -5,7 +5,7 @@
    "id": "8a16ff72",
    "metadata": {},
    "source": [
-    "# Introduction to Chat\n",
+    "# Introduction to Operators\n",
     "\n",
     "In this notebook, we'll explore the basics of prompting and rendering prompts. Follow along with the code and instructions to get a hands-on experience. Feel free to modify and experiment with the code as you go!"
    ]
@@ -17,8 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys, os\n",
-    "sys.path.append(\"../..\")"
+    "pip install langtree --quiet"
    ]
   },
   {
