--- a/docs/intro_examples/completion/guided_openai_completion_examples.ipynb
+++ b/docs/intro_examples/completion/guided_openai_completion_examples.ipynb
@@ -25,8 +25,7 @@
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.path.append(\"../../..\")"
+    "pip install langtree --quiet"
    ]
   },
   {
